# promptshield

./: .gitignore  AGENTS.md  README.md  STATUS.md  agent.md  mkdocs.yml  pyproject.toml  vercel.json
.cursor/rules/: promptshield-core.mdc  python-package.mdc  web-mvp.mdc
docs/: CONTRIBUTING.md  api.md  cli.md  configuration.md  examples.md  faq.md  features.md  installation.md  quickstart.md  roadmap.md
mobile/: README.md  app.json  package-lock.json  package.json
mobile/app/: _layout.tsx  about.tsx  index.tsx  results.tsx  rules.tsx
mobile/components/: AppHeader.tsx
mobile/contexts/: SanitizeContext.tsx
mobile/theme/: tokens.ts
mobile/utils/: sanitize.ts
scripts/: sync_api_key_rules.py
src/promptshield/: __init__.py  pipeline.py
src/promptshield/cli/: main.py
src/promptshield/compressor/: __init__.py  base.py
src/promptshield/config/: patterns.yaml
src/promptshield/detector/: __init__.py  api_key_rules.json  api_keys.py  pii.py  scanner.py
src/promptshield/redactor/: __init__.py  base.py
tests/: __init__.py  test_compressor.py  test_detector.py  test_redactor.py
web/: app.js  index.html  styles.css
